--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
@@ -5,10 +5,10 @@
   <div class="content">
     <div class="name-item">
       <div class="confirm-radio d-flex justify-content-between mx-4">
-        <div class="radio-confirm">
+        <!--<div class="radio-confirm">
           <input id="radio-file-account" type="radio" name="choose-radio-signature" [value]="1" [(ngModel)]='typeImageSignatureRadio' (change)="t(1)">
           <label for="radio-file-account" class="ms-2">File chữ ký từ tài khoản</label>
-        </div>
+        </div>-->
         <div class="radio-confirm">
           <input id="radio-file-com" type="radio" name='choose-radio-signature' [value]="2" [(ngModel)]='typeImageSignatureRadio' (change)="t(2)">
           <label for="radio-file-com" class="ms-2">Tải file ảnh chữ ký</label>
