--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -66,7 +66,7 @@
             <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
               <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
                 <label style="color: #333; font-weight: normal;"
-                  [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractTypeItems[id].isDisabled? 'lightgrey': ''}">{{getContractTypeItems[id].item_text}}
+                  [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractTypeItems[id].isDisabled? 'lightgrey': ''}">{{getContractTypeItems[id].name}}
                 </label>
               </div>
             </ng-template>
@@ -88,7 +88,7 @@
               <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
                 <label style="color: #333; font-weight: normal;"
                   [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
-                  {{getContractConnectItems[id].item_text}}
+                  {{getContractConnectItems[id].ref_name}}
                 </label>
               </div>
             </ng-template>
