--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -24,7 +24,9 @@
       </li>
     </ul>
   </div>
-  <img src="assets/img/icon_close.svg" class="icon_close" ngbTooltip="{{'btn.close' | translate}}" (click)="open(modalNotifi)"/>
+  <div>
+    <img src="assets/img/icon_close.svg" width="24px" class="icon_close" ngbTooltip="{{'btn.close' | translate}}" (click)="open(modalNotifi)"/>
+  </div>
 </div>
 
 <!-- Popup notification close -->
